...
import 'package:bitcoin_calculator/utils/calculations.dart';
import 'package:flutter/material.dart';
import 'main.dart';
import 'package:flutter/widgets.dart';

class usdToBtc extends StatefulWidget {
  usdToBtc({Key key, this.title}) : super(key: key);

  final String title;

  @override
  _usdToBtc createState() => _usdToBtc();
}
...
                    ),
            ),
            Padding(
              padding: EdgeInsets.only(left: 20, right: 20, top: 55),
              child: Focus(
                child: TextField(
                  key: Key('enter-usd-field'),
                  textAlign: TextAlign.left,
                  controller: usd,
                  keyboardType: TextInputType.number,
                  decoration: InputDecoration(
                      contentPadding: EdgeInsets.only(left: 10, right: 20),
                      enabledBorder: new OutlineInputBorder(
...
